fixed: ticket #10209 now playing bar covering scroll bars
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@34357 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/addons/webinterface.default/css/core.css
+++ b/addons/webinterface.default/css/core.css
@@ -249,7 +249,7 @@ div.imgWrapper div.inner {
 	height: 150px;
 	bottom: 0;
 	left: 0;
-	right: 0;
+	right: 16px;
 	z-index: 10000; /* Top most always */
 	background: #333;
 	opacity: 0.98;
